# remix-exploration

./: Cargo.toml  README.md
src/: main.rs  util.rs
src/bundles/: automata.rs  gridworld.rs  mod.rs  ui.rs
src/components/: automata.rs  gridworld.rs  mod.rs  ui.rs
src/events/: game.rs  mod.rs  remix.rs
src/game/: dna.rs  mod.rs  stats.rs
src/plugins/: debug.rs  mod.rs  states.rs  ui.rs
src/resources/: automata.rs  debug.rs  game.rs  gridworld.rs  mod.rs  ui.rs
src/states/: game.rs  gameover.rs  intro.rs  mod.rs  remix.rs
src/systems/: debug.rs  mod.rs  ui.rs
