[package]
name = "remix-exploration"
version = "0.1.0"
authors = ["Shane Lillie <ignignokterr@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8"
bevy_egui = "0.15"
bevy-inspector-egui = "0.12"
derivative = "2.2"
num-traits = "0.2"
paste = "1.0"
rand = "0.8"
rand_distr = "0.4"
